# alteralterego

./: CMakeLists.txt
source/headers/: AE_questions.h  AE_stats.h  alterego_stats.h  game.h  graphics.h  input.h  profile.h  questions.h  stat.h
source/src/: game.cpp  graphics.cpp  input.cpp  main.cpp  profile.cpp  stat.cpp
